--- a/src/content/pages/elements.mdx
+++ b/src/content/pages/elements.mdx
@@ -65,7 +65,7 @@ example.com (but not on Github, for example).
 
 Some text to show that the reference links can follow later.
 
-[arbitrary case-insensitive reference text]: https://www.themefisher.com
+[arbitrary case-insensitive reference text]: https://compound-pk.vercel.app/
 [1]: https://gethugothemes.com
 [link text itself]: https://www.getjekyllthemes.com
 
